# SGLEngine

./: CMakeLists.txt  chess_scene.data  chessboard.cpp  compile.sh  lattice.cpp  loadbmp.cpp  loadbmp.h  loadbmp.hpp  run.sh  scene.data  sglengine.cpp  sglengine.h  sglengine_loadscene.cpp  sglengine_objparser.cpp  sglenginephys.cpp  sglenginephys.h  test.cpp
shaders/: deform.vs  simple.fs  simple.vs  simple_33.fs  simple_33.vs  simple_color.fs
